--- a/EventGuru02/Fahad/Fahad-Event Posting.storyboard
+++ b/EventGuru02/Fahad/Fahad-Event Posting.storyboard
@@ -46,7 +46,7 @@
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                             </textView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" misplaced="YES" text="Price:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1by-WY-cZp">
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="Price:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1by-WY-cZp">
                                 <rect key="frame" x="17" y="482" width="44" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
@@ -117,13 +117,13 @@
                             <constraint firstItem="L7F-KW-pvn" firstAttribute="top" secondItem="rjD-1L-GVY" secondAttribute="bottom" constant="21" id="6Gr-tq-TTa"/>
                             <constraint firstItem="e87-W9-ebQ" firstAttribute="trailing" secondItem="i6R-1G-RRp" secondAttribute="trailing" constant="16" id="6vc-ky-WXN"/>
                             <constraint firstItem="tmz-G0-L70" firstAttribute="top" secondItem="e87-W9-ebQ" secondAttribute="top" constant="15" id="77Q-ab-foD"/>
-                            <constraint firstItem="1by-WY-cZp" firstAttribute="top" secondItem="L7F-KW-pvn" secondAttribute="bottom" constant="122" id="DtX-r1-K7I"/>
+                            <constraint firstItem="1by-WY-cZp" firstAttribute="top" secondItem="L7F-KW-pvn" secondAttribute="bottom" constant="116" id="DtX-r1-K7I"/>
                             <constraint firstItem="L7F-KW-pvn" firstAttribute="leading" secondItem="e87-W9-ebQ" secondAttribute="leading" constant="16" id="FV6-ih-9pi"/>
                             <constraint firstItem="H4Q-rn-d73" firstAttribute="top" secondItem="vGb-64-eO7" secondAttribute="bottom" constant="8" symbolic="YES" id="GEK-aW-OYH"/>
                             <constraint firstItem="tmz-G0-L70" firstAttribute="leading" secondItem="e87-W9-ebQ" secondAttribute="leading" constant="17" id="GaL-Ih-PnR"/>
                             <constraint firstItem="Lsg-qe-p0a" firstAttribute="leading" secondItem="Y3r-ba-Vw5" secondAttribute="trailing" constant="87" id="HAj-vl-EZI"/>
                             <constraint firstItem="vGb-64-eO7" firstAttribute="top" secondItem="5Ll-bs-BHC" secondAttribute="bottom" constant="15" id="Heb-Nl-dwF"/>
-                            <constraint firstItem="1by-WY-cZp" firstAttribute="leading" secondItem="e87-W9-ebQ" secondAttribute="leading" constant="16" id="JJ1-rY-Mso"/>
+                            <constraint firstItem="1by-WY-cZp" firstAttribute="leading" secondItem="e87-W9-ebQ" secondAttribute="leading" constant="17" id="JJ1-rY-Mso"/>
                             <constraint firstItem="0r9-nE-R2t" firstAttribute="top" secondItem="Lsg-qe-p0a" secondAttribute="bottom" constant="38" id="Jc1-At-5oq"/>
                             <constraint firstItem="e87-W9-ebQ" firstAttribute="trailing" secondItem="tmz-G0-L70" secondAttribute="trailing" constant="16" id="KVx-14-Ynh"/>
                             <constraint firstItem="Y3r-ba-Vw5" firstAttribute="leading" secondItem="e87-W9-ebQ" secondAttribute="leading" constant="17" id="LKo-vp-LHR"/>
