--- a/EventGuru02/Base.lproj/Main.storyboard
+++ b/EventGuru02/Base.lproj/Main.storyboard
@@ -64,10 +64,10 @@
             </objects>
             <point key="canvasLocation" x="1400.7633587786258" y="-266.19718309859155"/>
         </scene>
-        <!--Interest-->
+        <!--UserLogin-->
         <scene sceneID="RpV-we-rQC">
             <objects>
-                <viewControllerPlaceholder storyboardName="Interest" id="zsa-qS-dBf" sceneMemberID="viewController">
+                <viewControllerPlaceholder storyboardName="UserLogin" id="zsa-qS-dBf" sceneMemberID="viewController">
                     <navigationItem key="navigationItem" id="aHd-Tz-afu"/>
                 </viewControllerPlaceholder>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="mxa-Od-9PY" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
